--- a/settings.toml
+++ b/settings.toml
@@ -4,7 +4,7 @@ FLASK_ADMIN_NAME = "Pymaster Admin"
 FLASK_ADMIN_TEMPLATE_MODE = "bootstrap3"
 FLASK_ADMIN_SWATCH = 'cerulean'
 SQLALCHEMY_DATABASE_URI = 'sqlite:///development.db'
-TITLE = "pymaster"
+TITLE = "eFootball PyMaster"
 SECRET_KEY = "jadkfbsdkjbfbh"
 PASSWORD_SCHEMES = ['pbkdf2_sha512', 'md5_crypt']
 EXTENSIONS = [
